--- a/lang/ca.json
+++ b/lang/ca.json
@@ -1,48 +1,166 @@
 {
-  "A fresh verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su correu electrònic.",
-  "All rights reserved.": "Tots los drets reservats.",
-  "Before proceeding, please check your email for a verification link.": "Antes de continuar, por favor, confirme su correu electrònic con el enlace de verificación que le fue enviado.",
-  "click here to request another": "haga clic aquí para solicitar otro",
-  "Confirm Password": "Confirmar contrassenya",
-  "Dashboard": "Panell",
-  "E-Mail Address": "correu electrònic",
-  "Forbidden": "Prohibit",
-  "Forgot Your Password?": "Has oblidat la contrassenya?",
-  "Go Home": "Anar a inici",
-  "Hello!": "Hola!",
-  "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no se requiere ninguna acción adicional.",
-  "If you did not receive the email": "Si no has rebut el correu electrònic",
-  "If you did not request a password reset, no further action is required.": "Si no has solicitado el restablecimiento de contrassenya, omita este correu electrònic.",
-  "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "Si tiene problemas para hacer clic en el botón \":actionText\", copie y pegue la siguiente URL \nen su navegador web: [:actionURL](:actionURL)",
-  "Invalid signature.": "Signatura no vàlida.",
-  "Login": "Entrar",
-  "Logout": "Sortir",
-  "Name": "Nom",
-  "Not Found": "No trobat",
-  "Oh no": "Opps! ",
-  "Page Expired": "Pàgina Expirada",
-  "Page Not Found": "Pàgina no trobada",
-  "Password": "Contrassenya",
-  "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correu electrònic.",
-  "Please confirm your password before continuing.": "Por favor, confirma tu contrassenya antes de continuar.",
-  "Regards": "Salutacions",
-  "Register": "Registrar",
-  "Remember Me": "Recorda'm",
-  "Reset Password": "Restablir contrassenya",
-  "Reset Password Notification": "Notificación de restablecimiento de contrassenya",
-  "Send Password Reset Link": "Enviar enlace para restablecer la contrassenya",
-  "Server Error": "Error del servidor",
-  "Service Unavailable": "Servei no disponible",
-  "This action is unauthorized.": "Esta acción no está autorizada.",
-  "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contrassenya caducará en :count minutos.",
-  "Toggle navigation": "Activar navegació",
-  "Too Many Attempts.": "Massa intents",
-  "Too Many Requests": "Massa peticions",
-  "Unauthorized": "No autoritzat",
-  "Verify Email Address": "Confirma el teu correu electrònic",
-  "Verify Your Email Address": "Verifica el teu correu electrònic",
-  "We won't ask for your password again for a few hours.": "No pediremos tu contrassenya de nuevo por unas horas.",
-  "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contrassenya para su cuenta.",
-  "Your email address is not verified.": "La teva adreça de correu electrònic no está verificada.",
-  "Whoops!": "Vaja!"
+    "Panell de Gestió": "Panell de Gestió",
+    "Profile": "Perfil",
+    "Log Out": "Tancar sessió",
+    "El teu espai - BookCores": "El teu espai - BookCores",
+    "BIBLIOTECA": "BIBLIOTECA",
+    "Cerca": "Cerca",
+    "La teva cistella": "La teva cistella",
+    "Hola,": "Hola,",
+    "El meu perfil": "El meu perfil",
+    "Tancar sessió": "Tancar sessió",
+    "Inicia sessió": "Inicia sessió",
+    "Registra't": "Registra't",
+    "Tendències ara mateix": "Tendències ara mateix",
+    "Recomanats per a tu": "Recomanats per a tu",
+    "No hi ha llibres disponibles.": "No hi ha llibres disponibles.",
+    "Contacte": "Contacte",
+    "Segueix-nos": "Segueix-nos",
+    "Avís Legal": "Avís Legal",
+    "Cookies": "Cookies",
+    "La meva biblioteca": "La meva biblioteca",
+    "TORNAR AL CATÀLEG": "TORNAR AL CATÀLEG",
+    "Busca els teus llibres...": "Busca els teus llibres...",
+    "Veure fitxa": "Veure fitxa",
+    "Llegir ara": "Llegir ara",
+    "No s'han trobat llibres amb aquesta cerca.": "No s'han trobat llibres amb aquesta cerca.",
+    "La teva biblioteca està buida": "La teva biblioteca està buida",
+    "Esborrar cerca": "Esborrar cerca",
+    "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!",
+    "Explorar el catàleg": "Explorar el catàleg",
+    "La teva llibreria digital.": "La teva llibreria digital.",
+    
+    "Llibre": "Llibre",
+    "Autor": "Autor",
+    "Editorial": "Editorial",
+    "Tag / Gènere": "Tag / Gènere",
+    "Tag": "Tag",
+    "Afegir": "Afegir",
+    "Tag no trobat (Prova un altre gènere o autor)": "Tag no trobat (Prova un altre gènere o autor)",
+    "S'han trobat": "S'han trobat",
+    "resultats": "resultats",
+    "Cercant...": "Cercant...",
+    "Ordenar:": "Ordenar:",
+    "Coincidència Exacta": "Coincidència Exacta",
+    "No s'han trobat llibres": "No s'han trobat llibres",
+    "Prova de canviar els filtres, revisar l'ortografia o utilitzar termes més generals.": "Prova de canviar els filtres, revisar l'ortografia o utilitzar termes més generals.",
+    "Escriu el títol del llibre...": "Escriu el títol del llibre...",
+    "Busca un autor...": "Busca un autor...",
+    "Busca una editorial...": "Busca una editorial...",
+    "Escriu un gènere i prem Enter...": "Escriu un gènere i prem Enter...",
+    
+    "Millor Valorants": "Millor Valorats",
+    "Preu: Baix a Alt": "Preu: Baix a Alt",
+    "Preu: Alt a Baix": "Preu: Alt a Baix",
+    "Més recents": "Més recents",
+    
+    "Tornar enrere": "Tornar enrere",
+    "Tornar a la cerca": "Tornar a la cerca",
+    "Tornar al catàleg": "Tornar al catàleg",
+    "Afegir a la cistella": "Afegir a la cistella",
+    "Afegir a la Cistella": "Afegir a la Cistella",
+    "Inicia sessió per comprar": "Inicia sessió per comprar",
+    "Login per comprar": "Login per comprar",
+    "per": "per",
+    "General": "General",
+    "Autor Desconegut": "Autor Desconegut",
+    "Sinopsi": "Sinopsi",
+    "Data": "Data",
+    "Preu": "Preu",
+    
+    "Valoracions i Ressenyes": "Valoracions i Ressenyes",
+    "Comunitat de lectors": "Comunitat de lectors",
+    "Encara no hi ha ressenyes per aquest llibre.": "Encara no hi ha ressenyes per aquest llibre.",
+    "Escriu la teva opinió": "Escriu la teva opinió",
+    "Publicar una ressenya": "Publicar una ressenya",
+    "Puntuació": "Puntuació",
+    "Comentari": "Comentari",
+    "Què t'ha semblat aquest llibre?": "Què t'ha semblat aquest llibre?",
+    "Què t'ha semblat?": "Què t'ha semblat?",
+    "Publicar ressenya": "Publicar ressenya",
+    "Publicar": "Publicar",
+    "Vols deixar la teva opinió?": "Vols deixar la teva opinió?",
+    "Vols participar?": "Vols participar?",
+    "Inicia sessió per escriure una ressenya": "Inicia sessió per escriure una ressenya",
+    
+    "Contestar": "Contestar",
+    "Escriu resposta...": "Escriu resposta...",
+    "Enviar": "Enviar",
+    "Login": "Login",
+    "per contestar.": "per contestar.",
+    
+    "Excel·lent": "Excel·lent",
+    "Molt bo": "Molt bo",
+    "Correcte": "Correcte",
+    "Regular": "Regular",
+    "Dolent": "Dolent",
+
+    "El Ressò de les Cendres": "El Ressò de les Cendres",
+    "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.": "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.",
+    "L'Ombra del Bosc": "L'Ombra del Bosc",
+    "Un thriller verd que t'atraparà des de la primera pàgina. Què s'amaga darrere dels arbres mil·lenaris?": "Un thriller verd que t'atraparà des de la primera pàgina. Què s'amaga darrere dels arbres mil·lenaris?",
+    "Navegant entre Estrelles": "Navegant entre Estrelles",
+    "Un viatge espacial sense retorn. La humanitat busca una nova llar, però l'univers és més hostil del que pensaven.": "Un viatge espacial sense retorn. La humanitat busca una nova llar, però l'univers és més hostil del que pensaven.",
+    "La Ciutat de Vidre": "La Ciutat de Vidre",
+    "Una ciutat invisible als ulls dels humans.": "Una ciutat invisible als ulls dels humans.",
+    "Codi Infinit": "Codi Infinit",
+    "Apreneu els secrets dels algorismes moderns.": "Apreneu els secrets dels algorismes moderns.",
+    "Amor a la Toscana": "Amor a la Toscana",
+    "Un estiu que canviarà la vida de la protagonista.": "Un estiu que canviarà la vida de la protagonista.",
+    "L'Enigma del Far": "L'Enigma del Far",
+    "Ningú sap qui va encendre el far aquella nit.": "Ningú sap qui va encendre el far aquella nit.",
+    "Revolució Digital": "Revolució Digital",
+    "Com la IA està transformant la societat.": "Com la IA està transformant la societat.",
+    "El Secret dels Templers": "El Secret dels Templers",
+    "Una aventura a través de l'edat mitjana.": "Una aventura a través de l'edat mitjana.",
+    "Cuina per a Dummies": "Cuina per a Dummies",
+    "Receptes fàcils per a tothom.": "Receptes fàcils per a tothom.",
+    "Viatge al Centre de la Ment": "Viatge al Centre de la Ment",
+    "Entenent com pensem i sentim.": "Entenent com pensem i sentim.",
+    "Les Ombres de Barcelona": "Les Ombres de Barcelona",
+    "Un assassí en sèrie camina per les Rambles.": "Un assassí en sèrie camina per les Rambles.",
+    "Dracs i Masmorres: Guia": "Dracs i Masmorres: Guia",
+    "El manual definitiu per a mestres del calabós.": "El manual definitiu per a mestres del calabós.",
+    "PHP per a Experts": "PHP per a Experts",
+    "Domina Laravel i el desenvolupament web.": "Domina Laravel i el desenvolupament web.",
+    "Poemes de Tardor": "Poemes de Tardor",
+    "Versos melancòlics per llegir amb cafè.": "Versos melancòlics per llegir amb cafè.",
+    "La Guerra dels Xips": "La Guerra dels Xips",
+    "Quan els ordinadors prenen el control.": "Quan els ordinadors prenen el control.",
+    "Assassinat al Tren": "Assassinat al Tren",
+    "Un clàssic reinventat.": "Un clàssic reinventat.",
+    "La Història de Catalunya": "La Història de Catalunya",
+    "Des de Guifré el Pilós fins avui.": "Des de Guifré el Pilós fins avui.",
+    "Disseny Web Modern": "Disseny Web Modern",
+    "Aprèn Tailwind i AlpineJS.": "Aprèn Tailwind i AlpineJS.",
+    "El Jardí Oblidat": "El Jardí Oblidat",
+    "Flors que parlen i arbres que caminen.": "Flors que parlen i arbres que caminen.",
+    "Intel·ligència Artificial": "Intel·ligència Artificial",
+    "Ètica i futur de la IA.": "Ètica i futur de la IA.",
+    "Riu Avall": "Riu Avall",
+    "Descens en caiac pel riu més perillós.": "Descens en caiac pel riu més perillós.",
+    "El Darrer Alè": "El Darrer Alè",
+    "No podràs dormir després de llegir-lo.": "No podràs dormir després de llegir-lo.",
+
+    "Troba la teva": "Troba la teva",
+    "història preferida": "història preferida",
+    "Explora el nostre catàleg i descobreix mons nous.": "Explora el nostre catàleg i descobreix mons nous.",
+    "Veure catàleg": "Veure catàleg",
+    "La teva llibreria": "La teva llibreria",
+
+    "Fantasia": "Fantasia",
+    "Misteri": "Misteri",
+    "Ciència-Ficció": "Ciència-Ficció",
+    "Informàtica": "Informàtica",
+    "Romàntica": "Romàntica",
+    "Tecnologia": "Tecnologia",
+    "Històrica": "Històrica",
+    "Cuina": "Cuina",
+    "Psicologia": "Psicologia",
+    "Thriller": "Thriller",
+    "Fantasia, Rol": "Fantasia, Rol",
+    "Poesia": "Poesia",
+    "Ciència": "Ciència",
+    "Aventures": "Aventures",
+    "Terror": "Terror"
 }
