--- a/lang/en.json
+++ b/lang/en.json
@@ -1,53 +1,144 @@
 {
-  "Equips": "Teams",
-  "Equip": "Team",
-  "Facultats": "Faculties",
-  "Partits": "Matches",
-  "Competicions": "Competitions",
-  "penalització": "penalty",
-  "penalitzacions": "penalties",
-  "Encara no n'hi ha": "There aren't any yet",
-  "Encara no ha acabat la competició": "The competition is not over yet",
-  "punts": "points",
-  "Participants": "Members",
-  "Ha quedat campió de": "Won the competition of",
-  "Ha guanyat": "Has won",
-  "partit": "match",
-  "partits": "matches",
-  "Ha participat a l'activitat d'escalada": "He has participated in the climbing activity",
-  "Ha participat a la master class": "He has participated in the master class",
-  "Equip mixte 50%": "50% mixed team",
-  "Equip de cursos diferents": "Team of different courses",
-  "Equip de facultats diferents": "Team of different faculties",
-  "de l'equip": "of the team",
-  "Participants de la facultat": "Members of the faculty",
-  "Segur que vols sortir?": "Cancel ?",
-  "Guardar": "Save",
-  "Cancel·lar": "Cancel",
-  "Escollir Equip 1": "Select First Team",
-  "Escollir Equip 2": "Select Second Team",
-  "Guanyador": "Winner",
-  "Penalitzacions": "Penalties",
-  "no hi ha partits encara": "no matches yet",
-  "BookCores - La teva llibreria": "BookCores - Your Bookstore",
-  "Idioma": "Language",
-  "Inicia sessió": "Log in",
-  "Registra't": "Register",
-  "Dashboard": "Dashboard",
-  "Troba la teva pròxima": "Find your next",
-  "història preferida": "favorite story",
-  "Explora el nostre catàleg, llegeix ressenyes de la comunitat i troba les millors històries seleccionades per a tu a BookCores.": "Explore our catalog, read community reviews, and find the best stories curated for you at BookCores.",
-  "Veure catàleg": "View catalog",
-  "Saber-ne més": "Learn more",
-  "Els més ben valorats ⭐": "Top Rated ⭐",
-  "Llibres amb les millors ressenyes de la comunitat": "Books with the best community reviews",
-  "Veure tot": "See all",
-  "Autor Desconegut": "Unknown Author",
-  "Afegir al carretó": "Add to cart",
-  "Encara no hi ha llibres": "No books yet",
-  "Sembla que la base de dades està buida. Executa els seeders per veure contingut aquí.": "It seems the database is empty. Run seeders to see content here.",
-  "Sobre nosaltres": "About us",
-  "Contacte": "Contact",
-  "Política de Privacitat": "Privacy Policy",
-  "Tots els drets reservats.": "All rights reserved."
+    "Panell de Gestió": "Dashboard",
+    "Profile": "Profile",
+    "Log Out": "Log Out",
+    "El teu espai - BookCores": "Your Space - BookCores",
+    "BIBLIOTECA": "LIBRARY",
+    "Cerca": "Search",
+    "La teva cistella": "Your Cart",
+    "Hola,": "Hello,",
+    "El meu perfil": "My Profile",
+    "Tancar sessió": "Log Out",
+    "Inicia sessió": "Log In",
+    "Registra't": "Sign Up",
+    "Tendències ara mateix": "Trending Now",
+    "Recomanats per a tu": "Recommended for You",
+    "No hi ha llibres disponibles.": "No books available.",
+    "Contacte": "Contact",
+    "Segueix-nos": "Follow Us",
+    "Avís Legal": "Legal Notice",
+    "Cookies": "Cookies",
+    "La meva biblioteca": "My Library",
+    "TORNAR AL CATÀLEG": "BACK TO CATALOG",
+    "Busca els teus llibres...": "Search your books...",
+    "Veure fitxa": "View Details",
+    "Llegir ara": "Read Now",
+    "No s'han trobat llibres amb aquesta cerca.": "No books found matching this search.",
+    "La teva biblioteca està buida": "Your library is empty",
+    "Esborrar cerca": "Clear search",
+    "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "It seems you haven't purchased any books yet. Explore the catalog to start your collection!",
+    "Explorar el catàleg": "Explore the Catalog",
+    "La teva llibreria digital.": "Your digital bookstore.",
+    "Llibre": "Book",
+    "Autor": "Author",
+    "Editorial": "Publisher",
+    "Tag / Gènere": "Tag / Genre",
+    "Tag": "Tag",
+    "Afegir": "Add",
+    "Tag no trobat (Prova un altre gènere o autor)": "Tag not found (Try another genre or author)",
+    "S'han trobat": "Found",
+    "resultats": "results",
+    "Cercant...": "Searching...",
+    "Ordenar:": "Sort:",
+    "Coincidència Exacta": "Exact Match",
+    "No s'han trobat llibres": "No books found",
+    "Prova de canviar els filtres, revisar l'ortografia o utilitzar termes més generals.": "Try changing filters, checking spelling, or using more general terms.",
+    "Escriu el títol del llibre...": "Type the book title...",
+    "Busca un autor...": "Search for an author...",
+    "Busca una editorial...": "Search for a publisher...",
+    "Escriu un gènere i prem Enter...": "Type a genre and press Enter...",
+    "Millor Valorants": "Top Rated",
+    "Preu: Baix a Alt": "Price: Low to High",
+    "Preu: Alt a Baix": "Price: High to Low",
+    "Més recents": "Newest",
+    "Autor Desconegut": "Unknown Author",
+
+    "Tornar a la cerca": "Back to search",
+    "Tornar al catàleg": "Back to catalog",
+    "General": "General",
+    "Autor Desconegut": "Unknown Author",
+    "Preu": "Price",
+    "Afegir a la Cistella": "Add to Cart",
+    "Login per comprar": "Log in to buy",
+    "Comunitat de lectors": "Reader Community",
+    "Publicar una ressenya": "Post a review",
+    "Puntuació": "Rating",
+    "Què t'ha semblat?": "What did you think?",
+    "Publicar": "Post",
+    "Vols participar?": "Want to participate?",
+    "Inicia sessió": "Log In",
+    "Contestar": "Reply",
+    "Escriu resposta...": "Write a reply...",
+    "Enviar": "Send",
+    "Login": "Log In",
+    "per contestar.": "to reply.",
+
+    "El Ressò de les Cendres": "The Echo of Ashes",
+    "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.": "An epic story where the ashes of ancient dragons hide a secret that could change the world forever.",
+    "L'Ombra del Bosc": "The Shadow of the Forest",
+    "Un thriller verd que t'atraparà des de la primera pàgina. Què s'amaga darrere dels arbres mil·lenaris?": "A green thriller that will hook you from the first page. What hides behind the thousand-year-old trees?",
+    "Navegant entre Estrelles": "Sailing Among Stars",
+    "Un viatge espacial sense retorn. La humanitat busca una nova llar, però l'univers és més hostil del que pensaven.": "A space journey with no return. Humanity seeks a new home, but the universe is more hostile than they thought.",
+    "La Ciutat de Vidre": "The City of Glass",
+    "Una ciutat invisible als ulls dels humans.": "A city invisible to human eyes.",
+    "Codi Infinit": "Infinite Code",
+    "Apreneu els secrets dels algorismes moderns.": "Learn the secrets of modern algorithms.",
+    "Amor a la Toscana": "Love in Tuscany",
+    "Un estiu que canviarà la vida de la protagonista.": "A summer that will change the protagonist's life.",
+    "L'Enigma del Far": "The Lighthouse Enigma",
+    "Ningú sap qui va encendre el far aquella nit.": "No one knows who lit the lighthouse that night.",
+    "Revolució Digital": "Digital Revolution",
+    "Com la IA està transformant la societat.": "How AI is transforming society.",
+    "El Secret dels Templers": "The Secret of the Templars",
+    "Una aventura a través de l'edat mitjana.": "An adventure through the Middle Ages.",
+    "Cuina per a Dummies": "Cooking for Dummies",
+    "Receptes fàcils per a tothom.": "Easy recipes for everyone.",
+    "Viatge al Centre de la Ment": "Journey to the Center of the Mind",
+    "Entenent com pensem i sentim.": "Understanding how we think and feel.",
+    "Les Ombres de Barcelona": "The Shadows of Barcelona",
+    "Un assassí en sèrie camina per les Rambles.": "A serial killer walks down the Ramblas.",
+    "Dracs i Masmorres: Guia": "Dungeons & Dragons: Guide",
+    "El manual definitiu per a mestres del calabós.": "The definitive manual for dungeon masters.",
+    "PHP per a Experts": "PHP for Experts",
+    "Domina Laravel i el desenvolupament web.": "Master Laravel and web development.",
+    "Poemes de Tardor": "Autumn Poems",
+    "Versos melancòlics per llegir amb cafè.": "Melancholic verses to read with coffee.",
+    "La Guerra dels Xips": "The Chip War",
+    "Quan els ordinadors prenen el control.": "When computers take control.",
+    "Assassinat al Tren": "Murder on the Train",
+    "Un clàssic reinventat.": "A reinvented classic.",
+    "La Història de Catalunya": "The History of Catalonia",
+    "Des de Guifré el Pilós fins avui.": "From Guifré el Pilós to today.",
+    "Disseny Web Modern": "Modern Web Design",
+    "Aprèn Tailwind i AlpineJS.": "Learn Tailwind and AlpineJS.",
+    "El Jardí Oblidat": "The Forgotten Garden",
+    "Flors que parlen i arbres que caminen.": "Flowers that speak and trees that walk.",
+    "Intel·ligència Artificial": "Artificial Intelligence",
+    "Ètica i futur de la IA.": "Ethics and future of AI.",
+    "Riu Avall": "Downriver",
+    "Descens en caiac pel riu més perillós.": "Kayaking down the most dangerous river.",
+    "El Darrer Alè": "The Last Breath",
+    "No podràs dormir després de llegir-lo.": "You won't be able to sleep after reading it.",
+
+    "Troba la teva": "Find your",
+    "història preferida": "favorite story",
+    "Explora el nostre catàleg i descobreix mons nous.": "Explore our catalog and discover new worlds.",
+    "Veure catàleg": "View Catalog",
+    "La teva llibreria": "Your Bookstore",
+
+    "Fantasia": "Fantasy",
+    "Misteri": "Mystery",
+    "Ciència-Ficció": "Science Fiction",
+    "Informàtica": "Computer Science",
+    "Romàntica": "Romance",
+    "Tecnologia": "Technology",
+    "Històrica": "Historical",
+    "Cuina": "Cooking",
+    "Psicologia": "Psychology",
+    "Thriller": "Thriller",
+    "Fantasia, Rol": "Fantasy, RPG",
+    "Poesia": "Poetry",
+    "Ciència": "Science",
+    "Aventures": "Adventure",
+    "Terror": "Horror"
 }
