--- a/lang/es.json
+++ b/lang/es.json
@@ -1,53 +1,144 @@
 {
-  "Equips": "Equipos",
-  "Equip": "Equipo",
-  "Facultats": "Facultades",
-  "Partits": "Partidos",
-  "Competicions": "Competiciones",
-  "penalització": "penalización",
-  "penalitzacions": "penalizaciones",
-  "Encara no n'hi ha": "Todavía no disponible",
-  "Encara no ha acabat la competició": "Aún no ha terminado la competición",
-  "punts": "puntos",
-  "Participants": "Participantes",
-  "Ha quedat campió de": "Ha quedado campeón de",
-  "Ha guanyat": "Ha ganado",
-  "partit": "partido",
-  "partits": "partidos",
-  "Ha participat a l'activitat d'escalada": "Ha participado en la actividad de escalada",
-  "Ha participat a la master class": "Ha participado en la master class",
-  "Equip mixte 50%": "Equipo mixto 50%",
-  "Equip de cursos diferents":"Equipo de distintos cursos",
-  "Equip de facultats diferents":"Equipo de facultades diferentes",
-  "de l'equip": "del equipo",
-  "Participants de la facultat":"Participantes de la facultad",
-  "Segur que vols sortir?":"Quieres cancelar",
-  "Guardar": "Guardar",
-  "Cancel·lar": "Cancelar",
-  "Escollir Equip 1": "Seleccionar primer equipo",
-  "Escollir Equip 2": "Seleccionar segundo equipo",
-  "Guanyador": "Ganador",
-  "Penalitzacions": "Penalizaciones",
-  "no hi ha partits encara": "no hay ningun partido",
-  "BookCores - La teva llibreria": "BookCores - Tu librería",
-    "Idioma": "Idioma",
-    "Dashboard": "Panel de control",
+    "Panell de Gestió": "Panel de Gestión",
+    "Profile": "Perfil",
+    "Log Out": "Cerrar sesión",
+    "El teu espai - BookCores": "Tu espacio - BookCores",
+    "BIBLIOTECA": "BIBLIOTECA",
+    "Cerca": "Buscar",
+    "La teva cistella": "Tu cesta",
+    "Hola,": "Hola,",
+    "El meu perfil": "Mi perfil",
+    "Tancar sessió": "Cerrar sesión",
     "Inicia sessió": "Iniciar sesión",
     "Registra't": "Regístrate",
-    "Troba la teva pròxima": "Encuentra tu próxima",
-    "història preferida": "historia favorita",
-    "Explora el nostre catàleg, llegeix ressenyes de la comunitat i troba les millors històries seleccionades per a tu a BookCores.": "Explora nuestro catálogo, lee reseñas de la comunidad y encuentra las mejores historias seleccionadas para ti en BookCores.",
-    "Veure catàleg": "Ver catálogo",
-    "Saber-ne més": "Saber más",
-    "Els més ben valorats ⭐": "Los mejor valorados ⭐",
-    "Llibres amb les millors ressenyes de la comunitat": "Libros con las mejores reseñas de la comunidad",
-    "Veure tot": "Ver todo",
-    "Autor Desconegut": "Autor desconocido",
-    "Afegir al carretó": "Añadir al carrito",
-    "Encara no hi ha llibres": "Todavía no hay libros",
-    "Sembla que la base de dades està buida. Executa els seeders per veure contingut aquí.": "Parece que la base de datos está vacía. Ejecuta los seeders para ver contenido aquí.",
-    "Sobre nosaltres": "Sobre nosotros",
+    "Tendències ara mateix": "Tendencias ahora mismo",
+    "Recomanats per a tu": "Recomendados para ti",
+    "No hi ha llibres disponibles.": "No hay libros disponibles.",
     "Contacte": "Contacto",
-    "Política de Privacitat": "Política de privacidad",
-    "Tots els drets reservats.": "Todos los derechos reservados."
+    "Segueix-nos": "Síguenos",
+    "Avís Legal": "Aviso Legal",
+    "Cookies": "Cookies",
+    "La meva biblioteca": "Mi biblioteca",
+    "TORNAR AL CATÀLEG": "VOLVER AL CATÁLOGO",
+    "Busca els teus llibres...": "Busca tus libros...",
+    "Veure fitxa": "Ver ficha",
+    "Llegir ara": "Leer ahora",
+    "No s'han trobat llibres amb aquesta cerca.": "No se han encontrado libros con esta búsqueda.",
+    "La teva biblioteca està buida": "Tu biblioteca está vacía",
+    "Esborrar cerca": "Borrar búsqueda",
+    "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "Parece que aún no has comprado ningún libro. ¡Explora el catálogo para empezar tu colección!",
+    "Explorar el catàleg": "Explorar el catálogo",
+    "La teva llibreria digital.": "Tu librería digital.",
+    "Llibre": "Libro",
+    "Autor": "Autor",
+    "Editorial": "Editorial",
+    "Tag / Gènere": "Etiqueta / Género",
+    "Tag": "Etiqueta",
+    "Afegir": "Añadir",
+    "Tag no trobat (Prova un altre gènere o autor)": "Etiqueta no encontrada (Prueba otro género o autor)",
+    "S'han trobat": "Se han encontrado",
+    "resultats": "resultados",
+    "Cercant...": "Buscando...",
+    "Ordenar:": "Ordenar:",
+    "Coincidència Exacta": "Coincidencia Exacta",
+    "No s'han trobat llibres": "No se han encontrado libros",
+    "Prova de canviar els filtres, revisar l'ortografia o utilitzar termes més generals.": "Prueba a cambiar los filtros, revisar la ortografía o utilizar términos más generales.",
+    "Escriu el títol del llibre...": "Escribe el título del libro...",
+    "Busca un autor...": "Busca un autor...",
+    "Busca una editorial...": "Busca una editorial...",
+    "Escriu un gènere i prem Enter...": "Escribe un género y pulsa Enter...",
+    "Millor Valorants": "Mejor Valorados",
+    "Preu: Baix a Alt": "Precio: Bajo a Alto",
+    "Preu: Alt a Baix": "Precio: Alto a Bajo",
+    "Més recents": "Más recientes",
+    "Autor Desconegut": "Autor Desconocido",
+
+    "Tornar a la cerca": "Volver a la búsqueda",
+    "Tornar al catàleg": "Volver al catálogo",
+    "General": "General",
+    "Autor Desconegut": "Autor Desconocido",
+    "Preu": "Precio",
+    "Afegir a la Cistella": "Añadir a la Cesta",
+    "Login per comprar": "Inicia sesión para comprar",
+    "Comunitat de lectors": "Comunidad de lectores",
+    "Publicar una ressenya": "Publicar una reseña",
+    "Puntuació": "Puntuación",
+    "Què t'ha semblat?": "¿Qué te ha parecido?",
+    "Publicar": "Publicar",
+    "Vols participar?": "¿Quieres participar?",
+    "Inicia sessió": "Iniciar sesión",
+    "Contestar": "Responder",
+    "Escriu resposta...": "Escribe una respuesta...",
+    "Enviar": "Enviar",
+    "Login": "Iniciar sesión",
+    "per contestar.": "para responder.",
+
+    "El Ressò de les Cendres": "El Eco de las Cenizas",
+    "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.": "Una historia épica donde las cenizas de los dragones antiguos esconden un secreto que podría cambiar el mundo para siempre.",
+    "L'Ombra del Bosc": "La Sombra del Bosque",
+    "Un thriller verd que t'atraparà des de la primera pàgina. Què s'amaga darrere dels arbres mil·lenaris?": "Un thriller verde que te atrapará desde la primera página. ¿Qué se esconde detrás de los árboles milenarios?",
+    "Navegant entre Estrelles": "Navegando entre Estrellas",
+    "Un viatge espacial sense retorn. La humanitat busca una nova llar, però l'univers és més hostil del que pensaven.": "Un viaje espacial sin retorno. La humanidad busca un nuevo hogar, pero el universo es más hostil de lo que pensaban.",
+    "La Ciutat de Vidre": "La Ciudad de Cristal",
+    "Una ciutat invisible als ulls dels humans.": "Una ciudad invisible a los ojos de los humanos.",
+    "Codi Infinit": "Código Infinito",
+    "Apreneu els secrets dels algorismes moderns.": "Aprende los secretos de los algoritmos modernos.",
+    "Amor a la Toscana": "Amor en la Toscana",
+    "Un estiu que canviarà la vida de la protagonista.": "Un verano que cambiará la vida de la protagonista.",
+    "L'Enigma del Far": "El Enigma del Faro",
+    "Ningú sap qui va encendre el far aquella nit.": "Nadie sabe quién encendió el faro aquella noche.",
+    "Revolució Digital": "Revolución Digital",
+    "Com la IA està transformant la societat.": "Cómo la IA está transformando la sociedad.",
+    "El Secret dels Templers": "El Secreto de los Templarios",
+    "Una aventura a través de l'edat mitjana.": "Una aventura a través de la edad media.",
+    "Cuina per a Dummies": "Cocina para Dummies",
+    "Receptes fàcils per a tothom.": "Recetas fáciles para todos.",
+    "Viatge al Centre de la Ment": "Viaje al Centro de la Mente",
+    "Entenent com pensem i sentim.": "Entendiendo cómo pensamos y sentimos.",
+    "Les Ombres de Barcelona": "Las Sombras de Barcelona",
+    "Un assassí en sèrie camina per les Rambles.": "Un asesino en serie camina por las Ramblas.",
+    "Dracs i Masmorres: Guia": "Dragones y Mazmorras: Guía",
+    "El manual definitiu per a mestres del calabós.": "El manual definitivo para maestros del calabozo.",
+    "PHP per a Experts": "PHP para Expertos",
+    "Domina Laravel i el desenvolupament web.": "Domina Laravel y el desarrollo web.",
+    "Poemes de Tardor": "Poemas de Otoño",
+    "Versos melancòlics per llegir amb cafè.": "Versos melancólicos para leer con café.",
+    "La Guerra dels Xips": "La Guerra de los Chips",
+    "Quan els ordinadors prenen el control.": "Cuando los ordenadores toman el control.",
+    "Assassinat al Tren": "Asesinato en el Tren",
+    "Un clàssic reinventat.": "Un clásico reinventado.",
+    "La Història de Catalunya": "La Historia de Cataluña",
+    "Des de Guifré el Pilós fins avui.": "Desde Guifré el Pilós hasta hoy.",
+    "Disseny Web Modern": "Diseño Web Moderno",
+    "Aprèn Tailwind i AlpineJS.": "Aprende Tailwind y AlpineJS.",
+    "El Jardí Oblidat": "El Jardín Olvidado",
+    "Flors que parlen i arbres que caminen.": "Flores que hablan y árboles que caminan.",
+    "Intel·ligència Artificial": "Inteligencia Artificial",
+    "Ètica i futur de la IA.": "Ética y futuro de la IA.",
+    "Riu Avall": "Río Abajo",
+    "Descens en caiac pel riu més perillós.": "Descenso en kayak por el río más peligroso.",
+    "El Darrer Alè": "El Último Aliento",
+    "No podràs dormir després de llegir-lo.": "No podrás dormir después de leerlo.",
+
+    "Troba la teva": "Encuentra tu",
+    "història preferida": "historia favorita",
+    "Explora el nostre catàleg i descobreix mons nous.": "Explora nuestro catálogo y descubre mundos nuevos.",
+    "Veure catàleg": "Ver catálogo",
+    "La teva llibreria": "Tu librería",
+
+    "Fantasia": "Fantasía",
+    "Misteri": "Misterio",
+    "Ciència-Ficció": "Ciencia Ficción",
+    "Informàtica": "Informática",
+    "Romàntica": "Romántica",
+    "Tecnologia": "Tecnología",
+    "Històrica": "Histórica",
+    "Cuina": "Cocina",
+    "Psicologia": "Psicología",
+    "Thriller": "Thriller",
+    "Fantasia, Rol": "Fantasía, Rol",
+    "Poesia": "Poesía",
+    "Ciència": "Ciencia",
+    "Aventures": "Aventuras",
+    "Terror": "Terror"
 }
